--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,13 +1,17 @@
 [project]
 name = "activate-virtualenv"
-version = "0.1.3"
+version = "0.1.5"
 description = "Add your description here"
 authors = [
     { name = "Cezar Pauxis", email = "pauxiscezar@gmail.com" }
 ]
 dependencies = []
 readme = "README.md"
+license = { file = "LICENSE" }
 requires-python = ">= 3.8"
+
+[project.urls]
+Repository = "https://github.com/usernein/activate-virtualenv/"
 
 [build-system]
 requires = ["hatchling"]
